// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Section should match snapshot when user clicks an artifact 1`] = `
<DocumentFragment>
  <div
    class="section"
  >
    <h3>
      deliverables
    </h3>
    <div
      class="sectionArtefacts"
    >
      <button
        class="artefact"
        value="\\"doc 1\\""
      >
        doc 1
      </button>
      <button
        class="artefact"
        value="\\"doc 2\\""
      >
        doc 2
      </button>
      <button
        class="artefact"
        value="\\"doc 3\\""
      >
        doc 3
      </button>
      <button
        class="addArtefact"
      >
        Add Artefact
      </button>
      <div
        class="artefact"
      >
        <h3>
          Artifact
        </h3>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Section should match snapshot when user tries to add artifact 1`] = `
<DocumentFragment>
  <div
    class="section"
  >
    <h3>
      deliverables
    </h3>
    <div
      class="sectionArtefacts"
    >
      <button
        class="artefact"
        value="\\"doc 1\\""
      >
        doc 1
      </button>
      <button
        class="artefact"
        value="\\"doc 2\\""
      >
        doc 2
      </button>
      <button
        class="artefact"
        value="\\"doc 3\\""
      >
        doc 3
      </button>
      <button
        class="addArtefact"
      >
        Add Artefact
      </button>
      <div
        class="uploadForm"
      >
        UploadForm
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Section should match snapshot with documents 1`] = `
<DocumentFragment>
  <div
    class="section"
  >
    <h3>
      deliverables
    </h3>
    <div
      class="sectionArtefacts"
    >
      <button
        class="artefact"
        value="\\"doc 1\\""
      >
        doc 1
      </button>
      <button
        class="artefact"
        value="\\"doc 2\\""
      >
        doc 2
      </button>
      <button
        class="artefact"
        value="\\"doc 3\\""
      >
        doc 3
      </button>
      <button
        class="addArtefact"
      >
        Add Artefact
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Section should match snapshot with no documents 1`] = `
<DocumentFragment>
  <div
    class="section"
  >
    <h3>
      deliverables
    </h3>
    <div
      class="sectionArtefacts"
    >
      <button
        class="addArtefact"
      >
        Add Artefact
      </button>
    </div>
  </div>
</DocumentFragment>
`;
